MadBox: use API-21-safe URL encode/decode (avoid API-33 Charset overload)