@@ -34,7 +34,11 @@ public final class Utils {
      * @return The encoded URL.
      */
     public static String encodeUrlUtf8(final String string) {
-        return URLEncoder.encode(string, StandardCharsets.UTF_8);
+        try {
+            return URLEncoder.encode(string, "UTF-8");
+        } catch (final java.io.UnsupportedEncodingException e) {
+            throw new RuntimeException(e);   // UTF-8 always supported (API 21 compat)
+        }
     }
 
     /**
@@ -43,7 +47,11 @@ public final class Utils {
      * @return The decoded URL.
      */
     public static String decodeUrlUtf8(final String url) {
-        return URLDecoder.decode(url, StandardCharsets.UTF_8);
+        try {
+            return URLDecoder.decode(url, "UTF-8");
+        } catch (final java.io.UnsupportedEncodingException e) {
+            throw new RuntimeException(e);   // UTF-8 always supported (API 21 compat)
+        }
     }
 
     /**
